# Jewel-Castle

./: CMakeLists.txt  LICENSE  README.md
include/: Board.hpp  Button.hpp  Game.hpp  Move.hpp  RandomNumberGenerator.hpp  Score.hpp  Tile.hpp  Timer.hpp  configs.hpp
include/Abilities/: Ability.hpp  BombAbility.hpp  FistAbility.hpp  MagnetAbility.hpp
include/Jewels/: BlueJewel.hpp  GreenJewel.hpp  Jewel.hpp  PinkJewel.hpp  RedJewel.hpp  VioletJewel.hpp  YellowJewel.hpp
include/States/: GameState.hpp  LostState.hpp  MainMenuState.hpp  PauseState.hpp  PlayState.hpp  WinState.hpp
src/: Ability.cpp  BlueJewel.cpp  Board.cpp  BombAbility.cpp  Button.cpp  FistAbility.cpp  Game.cpp  GameState.cpp  GreenJewel.cpp  Jewel.cpp  LostState.cpp  MagnetAbility.cpp  MainMenuState.cpp  Move.cpp  PauseState.cpp  PinkJewel.cpp  PlayState.cpp  RandomNumberGenerator.cpp  RedJewel.cpp  Score.cpp  Tile.cpp  Timer.cpp  VioletJewel.cpp  WinState.cpp  YellowJewel.cpp  main.cpp
